Tree works perfectly :) but some bug with find first :(

--- a/lang/first.txt
+++ b/lang/first.txt
@@ -1,4 +1,4 @@
-AnyTerm ID NUM RNUM
+AnyTerm ID NUM RNUM BO
 N1 COMMA EPSILON
 N2 COMMA EPSILON
 N3 COMMA EPSILON
@@ -7,17 +7,17 @@ N5 DIV MUL EPSILON
 N7 AND OR EPSILON
 N8 EQ GE GT LE LT NE EPSILON
 N9 CASE EPSILON
-arithmeticExpr ID NUM RNUM
+arithmeticExpr ID NUM RNUM BO
 arithmeticOrBooleanExpr BO ID NUM RNUM
 assignmentStmt ID
 caseStmts CASE
-condionalStmt SWITCH
+conditionalStmt SWITCH
 dataType ARRAY BOOLEAN INTEGER REAL
 declareStmt DECLARE
 default DEFAULT EPSILON
 driverModule DRIVERDEF
 expression BO ID MINUS NUM RNUM
-factor ID NUM RNUM
+factor ID NUM RNUM BO
 idList ID
 index ID NUM
 input_plist ID
@@ -43,7 +43,7 @@ ret RETURNS EPSILON
 simpleStmt ID SQBO USE
 statement DECLARE FOR GET_VALUE ID PRINT SQBO SWITCH USE WHILE
 statements DECLARE FOR GET_VALUE ID PRINT SQBO SWITCH USE WHILE EPSILON
-term ID NUM RNUM
+term ID NUM RNUM BO
 type BOOLEAN INTEGER REAL
 value FALSE NUM TRUE
 var ID NUM RNUM
