--- a/lang/follow.txt
+++ b/lang/follow.txt
@@ -11,7 +11,7 @@ arithmeticExpr AND BC EQ GE GT LE LT NE OR SEMICOL
 arithmeticOrBooleanExpr BC SEMICOL
 assignmentStmt BREAK DECLARE END FOR GET_VALUE ID PRINT SQBO SWITCH USE WHILE
 caseStmts DEFAULT END
-condionalStmt BREAK DECLARE END FOR GET_VALUE ID PRINT SQBO SWITCH USE WHILE
+conditionalStmt BREAK DECLARE END FOR GET_VALUE ID PRINT SQBO SWITCH USE WHILE
 dataType COMMA SEMICOL SQBC
 declareStmt BREAK DECLARE END FOR GET_VALUE ID PRINT SQBO SWITCH USE WHILE
 default END
